testdata/invalid/interleave_invalid_12.lisp
;;error:5:20-21:unresolved symbol
;;
(defcolumns (Y :i16))
(defconst X 1)
(definterleaved Z (X Y))
